# point-n-shoot

./: CMakeLists.txt  README.md  arrow.c  arrow.h  autogen.sh  base.c  base.h  config.h.cmake  dot.c  event.h  item.c  item.h  main.c  point-n-shoot.c  point-n-shoot.h  scene.c  scene.h  utils.h
src/: arrow.c  arrow.h  base.c  dot.c  dot.h  event.h  item.c  item.h  joystick.c  joystick.h  linuxjs.c  linuxjs.h  main.c  platform.c  platform.h  point-n-shoot.c  scene.c  scene.h  utils.h
src/linux/: linuxjs.c  linuxplat.c  linuxplat.h
tests/: test-joystick.c
